feat: add debug and test pages for VitePress, update configuration and dependencies

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vitepress dev",
+    "dev": "vitepress dev --port 8080 --force",
     "build": "vitepress build",
-    "preview": "vitepress preview",
+    "preview": "vitepress preview --port 8080",
     "lint": "eslint . --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "clear-cache": "rm -rf node_modules/.vite"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
